2014-05-05  Ramon Novoa  <rnovoa@artica.es>

	* extras/pandoradb_migrate_5.0.x_to_5.1.mysql.sql,
	  pandoradb.data.oracle.sql,
	  pandoradb.data.postgreSQL.sql,
	  pandoradb_data.sql: Added the WMI Recon script to the database.

2014-05-05 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

        * pandora_console/include/functions_groups.php
          pandora_console/include/functions_events.php: Fixed bug
        in event viewer. A user could not be assigned himself as
        the owner of the event.
2014-05-05 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

        * pandora_console/include/functions_groups.php
          pandora_console/include/functions_events.php: Fixed bug
        in event viewer. A user could not be assigned himself as
        the owner of the event.

2014-05-05  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_netflow.php: Added an overflow
	property to the data table when its width is too high.

2014-05-05  Vanessa Gil  <vanessa.gil@artica.es>

	* pandoradb_migrate_5.0.x_to_5.1.mysql.sql
	  pandoradb_migrate_5.0.x_to_5.1.oracle.sql
	  pandoradb_migrate_5.0.x_to_5.1.postgreSQL.sql: Changed
	link 'Pandora FMS Manual'.

2014-05-05  Sergio Martin <sergio.martin@artica.es>

	* extensions/realtime_graphs
	extensions/realtime_graphs/ajax.php
	extensions/realtime_graphs/realtime_graphs.css
	extensions/realtime_graphs/realtime_graphs.js
	extensions/realtime_graphs.php: Added real time graphs 
	extension for ticket #736

2014-05-05  Ramon Novoa  <rnovoa@artica.es>

	* extras/pandoradb_migrate_5.0.x_to_5.1.mysql.sql
	  pandoradb_data.sql: Added a new OS for satellite agents.

2014-05-05 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

        * include/functions_agents.php
          include/functions_networkmap.php: Fixed not init agent state
        in networkmap.

2014-05-05  Vanessa Gil <vanessa.gil@artica.es>

	* operation/agentes/estado_generalagente.php: Add incident view
	in agent detail.
