@@ -40,9 +40,9 @@ ALTER TABLE tgraph_source MODIFY COLUMN `weight` float(8,3) NOT NULL DEFAULT 0;
 -- ---------------------------------------------------------------------
 -- Table `tconfig_os`
 -- ---------------------------------------------------------------------
-INSERT INTO `tconfig_os` (`name`, `description`, icon_name`) VALUES ('Router', 'Generic router', 'so_router.png');
-INSERT INTO `tconfig_os` (`name`, `description`, icon_name`) VALUES ('Switch', 'Generic switch', 'so_switch.png');
-INSERT INTO `tconfig_os` (`name`, `description`, icon_name`) VALUES ('Satellite', 'Satellite agent', 'so_other.png');
+INSERT INTO `tconfig_os` (`name`, `description`, `icon_name`) VALUES ('Router', 'Generic router', 'so_router.png');
+INSERT INTO `tconfig_os` (`name`, `description`, `icon_name`) VALUES ('Switch', 'Generic switch', 'so_switch.png');
+INSERT INTO `tconfig_os` (`name`, `description`, `icon_name`) VALUES ('Satellite', 'Satellite agent', 'so_other.png');
 
 
 -- ---------------------------------------------------------------------
