@@ -1,3 +1,7 @@
+2014-05-06  Junichi Satoh  <junichi@rworks.jp>
+
+	* extras/pandoradb_migrate_5.0.x_to_5.1.mysql.sql: Added missing '`'.
+
 2014-05-05  Ramon Novoa  <rnovoa@artica.es>
 
 	* extras/pandoradb_migrate_5.0.x_to_5.1.mysql.sql,
